删除 title（Photo View）展示
删除 title（Photo View）展示

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <meta name="keywords" content="">
 <link href="./src/index.css" rel="stylesheet">
 </head>
-<body>	<div class="title">Photos View</div>
+<body>	
+<!-- 	<div class="title">Photos View</div> -->
 		<ul class="wrapper"></ul>
 		<div class="show"></div>
 		<script src="./src/zepto.js"></script>
